--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.footer-main{
+.footer-main {
   display: flex;
   width: 90%;
   margin: 0 auto;
@@ -13,380 +13,253 @@
   margin-bottom: 40px;
   padding: 50px 0 0;
 }
-.f-sec1{
+
+.f-sec1 {
   width: 45%;
 }
-.f-p{
+
+.f-p {
   font-size: 16px;
   font-weight: 500px;
   color: #90A3BF;
   width: 68%;
 }
-.logo{
+
+.logo {
   font-size: 24px;
   color: #3563E9;
   font-weight: 700;
   margin-bottom: 20px;
 }
-.uls{
+
+.uls {
   display: flex;
   width: 45%;
   justify-content: space-between;
 }
-.sec{
+
+.sec {
   margin-left: 20px;
 }
-.f-hd{
+
+.f-hd {
   font-size: 20px;
   font-weight: 600;
 }
-.f-li{
+
+.f-li {
   font-size: 16px;
   margin-top: 20px;
   color: #90A3BF;
 
 }
+
 @media (max-width:768px) {
-  .logo{
+  .logo {
     font-size: 20px;
     margin-bottom: 10px;
   }
-  .footer-main{
+
+  .footer-main {
     flex-direction: column;
   }
-  .sec{
+
+  .sec {
     margin-left: 20px;
     width: 25%;
   }
-.uls{
-  width: 80%;
-}
-  .f-hd{
-  font-size: 16px;
+
+  .uls {
+    width: 80%;
   }
-  .f-li{
+
+  .f-hd {
+    font-size: 16px;
+  }
+
+  .f-li {
     font-size: 14px;
     margin-top: 10px;
-  } 
-  .f-sec1{
+  }
+
+  .f-sec1 {
     margin-bottom: 30px;
     width: 80%;
     margin-left: 20px;
   }
 }
-@media (max-width:425px){
-  .uls{
+
+@media (max-width:425px) {
+  .uls {
     flex-direction: column;
   }
-  .f-hd{
+
+  .f-hd {
     margin-top: 20px;
-    }  
-  .sec{
+  }
+
+  .sec {
     width: 100%;
-    }
+  }
 }
-.last{
+
+.last {
   border-top: 1px solid #13131329;
-  display:flex ;
+  display: flex;
   width: 80%;
   margin: 0 auto;
   padding: 20px 0 30px;
 }
-.l-sec2{
+
+.l-sec2 {
   display: flex;
   width: 40%;
-  gap:20px;
+  gap: 20px;
 }
-.l-sec1{
+
+.l-sec1 {
   width: 60%;
 }
-@media (max-width:425px) {    
-  .last{
-    flex-direction: column;
-    font-size: 14px;
-  }
-  .l-sec1{
-    width: 100%;
-  }
-  .l-sec2{
-    width: 100%;
-    margin-top: 20px;
-  }
-  .lt-p{
-    width: 50%;
-  }
+
+.last {
+  flex-direction: column;
+  font-size: 14px;
 }
-.pop-product{
-  background-color: #F6F7F9;
-  padding-bottom: 50px;
+
+.l-sec1 {
+  width: 100%;
 }
-.product-start, .imgs, .prod-last {
-  display: flex;
-}
-.prod-last{
-  gap: 20px;
+
+.l-sec2 {
+  width: 100%;
   margin-top: 20px;
 }
-.product{
-  width: 23%;
-  background-color: #fff;
-  padding: 30px 10px;
-  border-radius: 10px;
-}
-.h-prod{
-  font-size: 18px;
-  font-weight: 700;
-}
-.h-icon{
-  color: red;
-  margin-left: 70px;
-  margin-top: 10px;
-}
-.p-prod{
-  font-size: 14px;
-  margin-bottom: 40px;
-}
-.imgs{
-  gap: 20px;
-  margin-top: 50px;
-  margin-bottom: 10px;
-}
-.prod-but{
-  background-color: #3563E9;
-  color: #fff;
-  font-size: 14px;
-  padding: 8px 20px;
-  width:50%;
-  border-radius: 8px;
 
-}
-.span{
-  font-size: 13px;
-  color: #1A202C;
-  font-weight: 500;
-}
-.price{
-  font-size: 16px;
-  font-weight: 700;
-  margin-top: 8px;
-}
-.all-products{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: stretch;
-  margin-left: 20px;
-}
-.change{
-  font-size: 12px;
-  text-decoration: line-through;
-  color: #90A3BF;
-  font-weight: 400px;
-}
-.prod-but-c{
-  background-color: #3563E9;
-  color: #fff;
-  font-size: 14px;
-  padding: 9px 20px;
-  height: 10%;
+.lt-p {
   width: 50%;
-  border-radius: 8px;
-  margin-top: 10px;
-}
-.prod-last-1{
-  display: flex;
-  gap: 10px;
-  margin-top: 30px;
-}
-.h-icon-2{
-  margin-left: 70px;
-  font-size: 16px;
-  margin-top: 8px;
-}
-.prodd{
-  margin: 0 20px;
-  display: flex;
-  margin-bottom: 20px;
-  justify-content: space-between;
-  
-}
-.prod-head{
-  font-weight: 500;
-}
-.view{
-  color: #3563E9;
-}
-@media (max-width:988px) {
-  .product{
-    width: 30%;
-  }
-}
-@media (max-width:768px) {
-  .product{
-    width: 48%;
-  }
-  .h-icon, .h-icon-2{
-    margin-left: 150px;
-  }
-  .prod-last, .prod-last-1{
-    gap: 40px;
-  }
-  .prod-but-c , .prod-but{
-    width: 40%;
-    padding-left: 35px;
-  }
-
-}
-@media (max-width:642px) {
-  .prod-last-1{
-    margin-top: 50px;
-  }
-  .h-icon, .h-icon-2{
-    margin-left: 100px;
-  }
-}
-@media (max-width:642px){
-  .product{
-    width: 70%;
-    margin: 0 auto;
-    padding-left: 40px;
-  }
-}
-@media (max-width:505px){
-  .product{
-    width: 80%;
-  }
-}
-@media (max-width:425px) {
-  .product{
-    width: 95%;
-  }
-  .prod-but-c , .prod-but{
-    width: 50%;
-    padding-left: 35px;
-  }
-}
-@media (max-width:332px){
-  .prod-but-c , .prod-but{
-    width: 60%;
-    padding-left: 30px;
-  }
-  .prod-but{
-    height: 25%;
-  }
-}
-.rr-h{
-  margin-left: 50px;
-  margin-bottom: 20px;
 }
 
 
-
-
-
-
-
-
-
-
-
-.container{
+.container {
   max-width: 1310px;
   width: 100%;
   margin: 0 auto;
   padding: 0 15px;
 }
-.products{
+
+.products {
   display: flex;
   justify-content: space-between;
   align-items: stretch;
   flex-wrap: wrap;
 }
-.products-all{
+
+.products-all {
   background-color: #F6F7F9;
   font-family: "Plus Jakarta Sans";
   padding: 50px 0;
 }
-.product-title{
+
+.product-title {
   color: #90A3BF;
   font-size: 16px;
 }
-.view-btn{
+
+.view-btn {
   color: #3563E9;
   font-size: 16px;
 }
-.nav{
+
+.nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 0 20px;
 }
-.single-product{
+
+.single-product {
   background-color: #fff;
   border-radius: 8px;
   width: 23%;
   padding: 30px 10px;
   margin-bottom: 20px;
 }
-.title-name{
+
+.title-name {
   width: 85%;
 }
-.like{
+
+.like {
   width: 15%;
 }
+
 .products .h-icon {
   margin: 0;
 }
-.price-rent, .features, .p-head{
+
+.price-rent,
+.features,
+.p-head {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: wrap;
   padding: 10px 0;
 }
-.feature-img{
+
+.feature-img {
   height: 20px;
   width: 33%;
 }
-.diff{
+
+.diff {
   width: 22%;
 }
-.feature-img img{
+
+.feature-img img {
   width: 80%;
 }
-.p-title{
+
+.p-title {
   font-size: 18px;
   color: #000;
   font-weight: 700;
 }
-.name{
+
+.name {
   font-size: 13px;
   color: #90A3BF;
 }
-.image{
+
+.image {
   width: 100%;
   margin: 30px 0;
 }
-.image img{
+
+.image img {
   width: 100%;
 }
-.price{
+
+.price {
   font-size: 14px;
   color: #1A202C;
   font-weight: 300;
   width: 50%;
 }
-.discount{
+
+.discount {
   color: #90A3BF;
   text-decoration: line-through;
   font-weight: 700;
   display: block;
 }
-.price-size{
+
+.price-size {
   font-size: 16px;
   font-weight: 600;
 }
-.button{
+
+.button {
   background-color: #3563E9;
   color: #fff;
   font-size: 14px;
@@ -395,14 +268,383 @@
   width: 50%;
   text-align: center;
 }
-@media(max-width: 991px){
-  .single-product{
+
+.show {
+  width: 15%;
+  padding: 10px;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+@media(max-width: 991px) {
+  .single-product {
     width: 48%;
     margin-bottom: 20px;
   }
+
+  .show {
+    width: 30%;
+  }
 }
-@media (max-width: 767px) {
-  .single-product{
+
+@media (max-width: 425px) {
+  .single-product {
+    width: 100%;
+  }
+
+  .show {
+    width: 80%;
+  }
+}
+
+.selection{
+  background-color: #F6F7F9;
+}
+.main{
+  background-color: #fff;
+  margin-top: 20px;
+  padding: 20px 30px;
+  border-radius: 8px;
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
+.label {
+  margin-left: 8px;
+  font-weight: 600;
+  font-size: 16px;
+}
+.select{
+  padding-bottom: 10px;
+}
+.heading-2{
+  font-weight: 700;
+  font-size: 16px;
+}
+.para{
+  font-size: 12px;
+  color: rgba(144, 163, 191, 1);
+}
+.compound, .selectors ,.selection-main ,.mid{
+  display: flex;
+}
+.mid{
+  background-color: #3563E9;
+  color: #fff;
+  height:20%;
+  padding:20px 15px;
+  border-radius: 8px;
+  margin-top: 40px;
+}
+.up-arrow, .down-arrow{
+  font-size: 18px;
+}
+.selection-main{
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 90%;
+  flex-wrap: wrap;
+}
+.drop-down{
+  font-size: 24px;
+  margin-left: 15px;
+}
+.space{
+  margin-left: 20px;
+}
+.location ,.date{
+  border-right: 2px solid #e7e8eb;
+}
+.date ,.time{
+  padding-left: 20px;
+}
+.date,.location{
+  padding-right: 20px;
+}
+.changes{
+  display: none;
+}
+@media(max-width:1024px){
+  .main{
+    padding: 15px;
+  }
+  .date ,.time{
+    padding-left: 10px;
+  }
+  .selection-main{
+    flex-wrap: nowrap;
+    width: 98%;
+  }
+  .mid{
+    margin-left:8px ;
+    margin-right:8px ;
+  }
+}
+@media(max-width:768px){
+  .para{
+    display: none;
+  }
+  .changes{
+    display: block;
+  }
+  .selection-main{
+    flex-wrap:wrap;
+  }
+}
+@media(max-width:425px){
+  .main{
+    padding: 5px;
+  }
+  .drop-down{
+    margin-left: 3PX;
+  }
+  .heading-2{
+    font-size: 14px;
+    font-weight: 600;
+  }
+  .date ,.time{
+    padding-left: 2px;
+  }
+}
+.banner-main{
+  background-color: #F6F7F9;
+  padding-top: 50px;
+}
+.banner-m{
+  display: flex;
+ background-color: #F6F7F9;
+ font-family: "Plus Jakarta Sans", sans-serif;
+ width: 90%;
+ justify-content: space-between;
+ margin: 0 auto;
+ flex-wrap: wrap;
+}
+.banner1{
+  background-image: url("/bg1.png");
+}
+.banner2{
+  background-image: url("/bg2.png");
+}
+.banner1, .banner2{
+  padding:20px;
+  border-radius: 8px;
+  width: 49%;
+}
+.banner-img{
+  float: right;
+}
+.heading1{
+  color: #fff;
+  font-weight: 700;
+  font-size: 32px;
+  width: 60%;
+  margin-bottom: 20px;
+}
+.paragraph-b{
+  color: #fff;
+  font-size: 16px;
+  width: 60%;
+  margin-bottom: 20px;
+}
+.spy, .spy1{
+  padding: 20px 10px;
+  width: 30%;
+  font-size: 16px;
+}
+.spy1{
+  background-color: rgba(84, 166, 255, 1);
+}
+@media(max-width:991px){
+  .heading1{
+    width: 80%;
+    font-size: 26px;
+  }
+  .paragraph-b{
+    font-size: 14px;
+    width: 80%;
+
+  }
+  .spy, .spy1{
+    width: 50%;
+    font-size: 14px;
+    padding: 10px 8px;
+  }
+}
+@media(max-width:768px){
+  .banner2{
+    display: none;
+  }
+  .banner1{
+    width: 98%;
+  }
+  .banner-m{
+    width: 98%;
+    margin: 0 auto;
+  }
+  .heading1{
+    width: 70%;
+    font-size: 20px;
+  }
+  .paragraph-b{
+    width: 50%;
+  }
+  .spy, .spy1{
+    width: 30%;
+  }
+}
+@media(max-width:425px){
+  .heading1{
+    width: 90%;
+    font-size: 20px;
+  }
+  .paragraph-b{
+    font-size: 12px;
+    width: 80%;
+  }
+  .spy, .spy1{
+    width: 45%;
+    font-size: 12px;
+    padding: 8px 5px;
+  }
+}
+.h-sec2, .h-sec3, .h-main{
+  display: flex;
+}
+.side{
+  display: flex;
+  gap: 10px;
+}
+.h-sec3{
+  gap: 20px;
+}
+.h-main{
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+  padding: 20px;
+}
+.h-sec2{
+  color: #596780;
+  border:1px solid #caccd0;
+  padding: 10px;
+  border-radius: 25px;
+  margin-left: 30px;
+}
+.h-i{
+  font-size: 24px;
+}
+.option{
+  margin-left: 100px;
+}
+.search{
+  margin-right: 10px;
+}
+.type{
+  font-size: 15px;
+}
+.h-icons{
+  border: 1px solid #caccd0;
+  padding: 5px 8px ;
+  border-radius: 100%;
+  font-size: 24px;
+  height: 70%;
+  color: #596780;
+}
+.logo-h{
+  font-size: 24px;
+  color: #3563E9;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+@media(max-width:991px){
+  .option{
+    margin-left: 50px;
+  }
+  .h-icons{
+    font-size: 20px;
+    padding: 6px;
+    height: 60%;
+  }
+  .h-main{
+    width: 98%;
+  }
+}
+@media(max-width:768px){
+  .h-icons{
+    display: none;
+  }
+  .h-sec2{
+    margin-left: 0px;
+    padding: 7px;
+  }
+  .h-i{
+    font-size: 18px;
+  }
+  .type{
+    font-size: 12px;
+  }
+  .option{
+    margin-left: 30px;
+  }
+  h-ico{
+    width: 30;
+    height: 20;
+  }
+}
+@media(max-width:425px){
+  .side{
+    flex-direction: column;
+  }
+  .option{
+    margin-left: 80px;
+  }
+  .h-main{
+    width: 100%;
+  }
+  .logo-h{
+    width: 10%;
+  }
+  .h-ico{
+    margin-left: -80px;
+  }
+}
+.main-sec{
+  margin-left: 20px;
+  padding-bottom: 100px;
+}
+.component1, .component2{
+  margin-bottom: 30px;
+}
+.small, .numbers{
+  color: #90A3BF;
+}
+.small{
+  font-size: 12px;
+  margin-bottom: 20px;
+}
+.side-text{
+ margin-bottom: 10px;
+}
+.large-h, .side-text{
+  font-size: 18px;
+  font-weight: 600;
+  color: #596780;
+}
+.filter{
+  display: flex;
+}
+.Side-bar{
+  width: 20%;
+}
+.side2{
+  width: 80%;
+}
+.changes{
+  width: 100%;
+}
+@media(max-width:768px){
+  .main-sec{
+    display: none;
+  }
+  .side2  {
     width: 100%;
   }
 }
